# bazel-base

./: .bazelrc  BUILD.bazel  MODULE.bazel  create.sh  demo.bzl  hello_world.cc
